deploy/internal/network/pihole/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb
  namespace: pihole
  annotations:
    metallb.universe.tf/address-pool: pihole
    external-dns.alpha.kubernetes.io/hostname: pihole.home.arpa
spec:
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
  type: LoadBalancer
  externalTrafficPolicy: Local
