deploy/internal/network/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://pi-hole.internal.ticklethepanda.co.uk/admin
    gethomepage.dev/name: Pi-hole
    gethomepage.dev/group: Administration
    gethomepage.dev/icon: pi-hole
    gethomepage.dev/description: DNS filtering
    gethomepage.dev/pod-selector: app=pihole
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`pi-hole.internal.ticklethepanda.co.uk`)
      middlewares:
        - name: redirect-to-admin
        - name: tinyauth
          namespace: tinyauth
      services:
        - name: pihole-web
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-admin
  namespace: pihole
spec:
  redirectRegex:
    regex: "^https?://([^/]+)/?$"
    replacement: "https://${1}/admin/"
    permanent: false
